--- a/main.html
+++ b/main.html
@@ -4,9 +4,35 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.container{
+			background-color: #f5f5f5;
+			padding: 20px;
+		}
+		.author{
+			text-align: right;
+			font-style: italic;
+		}
+		.testimonial{
+			border: solid;
+			padding: 20px;
+			background-color: #ffffff; /* or any color you want */
+			margin-bottom: 20px; /* to add space between testimonials */
+		}
+	</style>
 </head>
 
 <body>
+	<div class="container">
+		<div class="testimonial">
+			<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+			<p class="author">-John Doe</p>
+		</div>
+		<div class="testimonial">
+			<p>I have been using this for a weeks now and it has completely transformed my workflow.</p>
+			<p class="author">-Jane Smith</p>
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
