--- a/main.html
+++ b/main.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+	<h1>Testimonials</h1>
 	<div class="container">
 		<div class="testimonial">
 			<p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
